<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.OpenSourceLicencesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="?colorPrimary"

        app:title="@string/open_source_licences"
        app:titleTextColor="@android:color/white"

        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <SearchView
        android:id="@+id/searchView"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="?colorPrimary"

        app:iconifiedByDefault="false"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"/>

    <View
        android:id="@+id/chipsView"

        android:layout_width="0dp"
        android:layout_height="48dp"

        android:background="?colorPrimary"

        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/matchCaseChip"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/match_case"

        style="@style/Widget.MaterialComponents.Chip.Filter"

        android:checked="false"

        android:textAlignment="center"
        android:gravity="center"

        app:layout_constraintTop_toTopOf="@id/chipsView"
        app:layout_constraintBottom_toBottomOf="@id/chipsView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/anyLetterChip"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/anyLetterChip"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/any_letter"

        style="@style/Widget.MaterialComponents.Chip.Filter"

        android:checked="true"
        android:gravity="center"

        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="@id/matchCaseChip"
        app:layout_constraintBottom_toBottomOf="@id/matchCaseChip"
        app:layout_constraintLeft_toRightOf="@id/matchCaseChip"
        app:layout_constraintRight_toLeftOf="@id/authorChip"/>

    <com.google.android.material.chip.Chip
        android:id="@+id/authorChip"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/author"

        style="@style/Widget.MaterialComponents.Chip.Filter"

        android:checked="true"
        android:gravity="center"

        android:textAlignment="center"

        app:layout_constraintTop_toTopOf="@id/matchCaseChip"
        app:layout_constraintBottom_toBottomOf="@id/matchCaseChip"
        app:layout_constraintLeft_toRightOf="@id/anyLetterChip"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:barrierDirection="bottom"

        app:constraint_referenced_ids="toolbar,chipsView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:visibility="gone"

        app:constraint_referenced_ids="searchView,chipsView,matchCaseChip,anyLetterChip,authorChip"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"

        android:scrollbars="vertical"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/loadingFrameLayout"

        android:layout_width="0dp"
        android:layout_height="0dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"/>

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emptyView"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:text="@string/no_licences_found"
        android:textColor="@android:color/black"

        android:gravity="center"

        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="28sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>